--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elastic-import",
+  "name": "@clarify/elastic-import",
   "version": "1.2.0",
   "description": "CLI for import data to ElasticSearch",
   "keywords": [
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:rubenjgarcia/elastic-import.git"
+    "url": "git@github.com:benvan/elastic-import.git"
   },
   "main": "lib/importer.js",
   "bin": {
